tests/ui/feature-gates/feature-gate-reborrow.stderr
error[E0658]: use of unstable library feature `reborrow`
  --> $DIR/feature-gate-reborrow.rs:4:10
   |
LL | #[derive(std::marker::Reborrow)]
   |          ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #145612 <https://github.com/rust-lang/rust/issues/145612> for more information
   = help: add `#![feature(reborrow)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `reborrow`
  --> $DIR/feature-gate-reborrow.rs:1:5
   |
LL | use std::marker::Reborrow;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #145612 <https://github.com/rust-lang/rust/issues/145612> for more information
   = help: add `#![feature(reborrow)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `reborrow`
  --> $DIR/feature-gate-reborrow.rs:1:5
   |
LL | use std::marker::Reborrow;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #145612 <https://github.com/rust-lang/rust/issues/145612> for more information
   = help: add `#![feature(reborrow)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
